<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20px"
    android:padding="20px"
    tools:context="com.example.alum01.proyectolimpieza.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ecology" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/colorTitle"
        android:layout_marginBottom="20px"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:layout_marginBottom="10px"
        android:textAlignment="center"
        android:textColor="@color/description"/>

    <Button
        android:id="@+id/btnBudget"
        android:layout_width="450px"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/presupuesto"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="100px"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/colchon" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/mueble" />

    </LinearLayout>

    <TextView
        android:id="@+id/web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web"
        android:textAlignment="center"
        android:linksClickable="true"
        android:autoLink="web" />

</LinearLayout>



